# oxidize-log

./: Cargo.toml  README.md  run.sh
.devcontainer/: devcontainer.json
docs/: next-session.md  notas.md  todo.md
examples/: test.rs
src/: config.rs  level.rs  lib.rs  logger.rs  sink.rs
