[package]
name = "oxidize-log"
version = "0.1.0"
edition = "2021"
description = "Core de logging multiplataforma en Rust con alto rendimiento y bindings para JS/TS y Java."
license = "MIT"
repository = "https://github.com/sanahujadev/oxidize-log"
keywords = ["logging", "rust", "multiplatform", "structured-logging"]
categories = ["development-tools", "logging"]

[dependencies]
# Dependencias futuras (comentadas por ahora)
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# chrono = "0.4"
# colored = "2"